--- a/examples/mean/mean.ipynb
+++ b/examples/mean/mean.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "# mode is either \"accuracy\" or \"resources\"\n",
     "\n",
-    "def gen_settings(comb_data_path, onnx_filename, scale, mode, settings_filename, params_path, pk_path, vk_path):\n",
+    "def gen_settings(comb_data_path, onnx_filename, scale, mode, settings_filename):\n",
     "  print(\"==== Generate & Calibrate Setting ====\")\n",
     "  # Set input to be Poseidon Hash, and param of computation graph to be public\n",
     "  # Poseidon is not homomorphic additive, maybe consider Pedersens or Dory commitment.\n",
@@ -168,7 +168,7 @@
     "  json.dump(dict(input_data = comb_dummy_data), open(comb_dummy_data_path, 'w' ))\n",
     "\n",
     "  # gen + calibrate setting\n",
-    "  gen_settings(comb_dummy_data_path, verifier_model_path, scale, mode, settings_path, srs_path, pk_path, vk_path)\n",
+    "  gen_settings(comb_dummy_data_path, verifier_model_path, scale, mode, settings_path)\n",
     "\n",
     "  # compile circuit\n",
     "  res = ezkl.compile_circuit(verifier_model_path, verifier_compiled_model_path, settings_path)\n",
