harmo placehol + theory_output

--- a/examples/mean/mean.ipynb
+++ b/examples/mean/mean.ipynb
@@ -440,6 +440,7 @@
    "source": [
     "# Prover/ data owner side\n",
     "theory_output = torch.mean(data_tensor)\n",
+    "print(\"theory_output: \", theory_output)\n",
     "class prover_model(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(prover_model, self).__init__()\n",
