--- a/examples/regression/regression.ipynb
+++ b/examples/regression/regression.ipynb
@@ -469,6 +469,8 @@
    ],
    "source": [
     "# Prover/ data owner side\n",
+    "theory_output = w_tensor\n",
+    "print(\"theory_output: \", theory_output)\n",
     "class prover_model(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(prover_model, self).__init__()\n",
