--- a/examples/covariance/covariance.ipynb
+++ b/examples/covariance/covariance.ipynb
@@ -459,6 +459,8 @@
    ],
    "source": [
     "# Prover/ data owner side\n",
+    "theory_output = torch.tensor(real_cov)\n",
+    "print(\"theory output: \", theory_output)\n",
     "class prover_model(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(prover_model, self).__init__()\n",
