fix abs&=, refine where+mean, init where+regres

--- a/examples/correlation/correlation.ipynb
+++ b/examples/correlation/correlation.ipynb
@@ -51,6 +51,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTE: Currently, the circuit is too huge, we would do it by requesting covariance and stdev and just calculate it on verifier side instead! Other circuits in this example can run well!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -114,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently, the circuit is too huge, possibly by requesting covariance and stdev and just calculate it on verifier side instead!"
+    "Currently, this circuit is too huge, we would do it by requesting covariance and stdev and just calculate it on verifier side instead!"
    ]
   },
   {
@@ -206,7 +214,6 @@
     "        self.x_var = nn.Parameter(data = torch.tensor(dummy_x_var), requires_grad = False)\n",
     "        self.y_var = nn.Parameter(data = torch.tensor(dummy_y_var), requires_grad = False)\n",
     "    def forward(self,X,Y):\n",
-    "        # some expression of tolerance to error in the inference\n",
     "        #  need to enforce same length, not yet\n",
     "        x_mean_cons = torch.abs(torch.sum(X)-X.size()[1]*(self.x_mean))<0.01*X.size()[1]*(self.x_mean)\n",
     "        y_mean_cons = torch.abs(torch.sum(Y)-Y.size()[1]*(self.y_mean))<0.01*Y.size()[1]*(self.y_mean)\n",
@@ -251,7 +258,6 @@
     "        self.x_var = nn.Parameter(data = torch.tensor(x_var), requires_grad = False)\n",
     "        self.y_var = nn.Parameter(data = torch.tensor(y_var), requires_grad = False)\n",
     "    def forward(self,X,Y):\n",
-    "        # some expression of tolerance to error in the inference\n",
     "        #  need to enforce same length, not yet\n",
     "        x_mean_cons = torch.abs(torch.sum(X)-X.size()[1]*(self.x_mean))<0.01*X.size()[1]*(self.x_mean)\n",
     "        y_mean_cons = torch.abs(torch.sum(Y)-Y.size()[1]*(self.y_mean))<0.01*Y.size()[1]*(self.y_mean)\n",
