--- a/examples/harmomean/harmomean.ipynb
+++ b/examples/harmomean/harmomean.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i ../../core.py"
+    "%run -i ../../zkstats/core.py"
    ]
   },
   {
