--- a/examples/where+mean/where+mean.ipynb
+++ b/examples/where+mean/where+mean.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i ../../core.py"
+    "%run -i ../../zkstats/core.py"
    ]
   },
   {
