--- a/examples/harmomean/harmomean.ipynb
+++ b/examples/harmomean/harmomean.ipynb
@@ -273,12 +273,12 @@
    "source": [
     "# Here verifier & prover can concurrently call setup since all params are public to get pk. \n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
-    "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path, srs_path,vk_path, pk_path )\n",
+    "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
     "print(\"=======================================\")\n",
     "# Prover generates proof\n",
     "print(\"Theory output: \", theory_output)\n",
-    "prover_gen_proof(prover_model_path, comb_data_path, witness_path, prover_compiled_model_path, settings_path, proof_path, pk_path, srs_path)"
+    "prover_gen_proof(prover_model_path, comb_data_path, witness_path, prover_compiled_model_path, settings_path, proof_path, pk_path)"
    ]
   },
   {
@@ -300,7 +300,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path, srs_path)"
+    "verifier_verify(proof_path, settings_path, vk_path)"
    ]
   },
   {
