test: add tests for op and computation, and refactor

--- a/examples/computation/computation.ipynb
+++ b/examples/computation/computation.ipynb
@@ -190,7 +190,7 @@
     "    out_1 = state.median(x_0)\n",
     "    return state.mean(torch.tensor([out_0, out_1]).reshape(1,-1,1))\n",
     "\n",
-    "prover_model = create_model(computation)\n",
+    "_, prover_model = create_model(computation)\n",
     "prover_gen_settings([data_path], comb_data_path, prover_model, prover_model_path, \"default\", \"resources\", settings_path)\n"
    ]
   },
