fix: make cli work again with new computation ui

--- a/examples/computation/computation.ipynb
+++ b/examples/computation/computation.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "## Step 2\n",
     "- User defines their computation in a function with signature `computation(state: State, x: list[torch.Tensor])`.\n",
-    "- Prover calls `create_model(computation)` to derive the actual model.\n",
+    "- Prover calls `computation_to_model(computation)` to derive the actual model.\n",
     "- Prover calls `prover_gen_settings`: export onnx file and compute the settings required by `ezkl.calibrate_settings`"
    ]
   },
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "from zkstats.computation import State, create_model\n",
+    "from zkstats.computation import State, computation_to_model\n",
     "\n",
     "\n",
     "def computation(state: State, x: list[torch.Tensor]):\n",
@@ -190,7 +190,7 @@
     "    out_1 = state.median(x_0)\n",
     "    return state.mean(torch.tensor([out_0, out_1]).reshape(1,-1,1))\n",
     "\n",
-    "_, prover_model = create_model(computation)\n",
+    "_, prover_model = computation_to_model(computation)\n",
     "prover_gen_settings([data_path], comb_data_path, prover_model, prover_model_path, \"default\", \"resources\", settings_path)\n"
    ]
   },
