fix: tests, rename createDummy, restore verifier_verify, remove zkstats_onefile

--- a/examples/correlation/correlation.ipynb
+++ b/examples/correlation/correlation.ipynb
@@ -157,7 +157,7 @@
     "y_vals_tensor = torch.reshape(torch.tensor(y_vals),(1,-1, 1))\n",
     "\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())\n",
     "dummy_x_vals = dummy_data['x']\n",
     "dummy_y_vals = dummy_data['y']\n",
@@ -243,7 +243,7 @@
     "        bool3, y_std = stdev(Y, self.y_std, self.y_mean)\n",
     "        bool4 = torch.abs(cov - self.corr*x_std*y_std)<=0.01*cov\n",
     "        return (torch.logical_and(torch.logical_and(bool1, bool2),torch.logical_and(bool3, bool4)), self.corr )\n",
-    "        \n",
+    "\n",
     "verifier_define_calculation(dummy_data_path, ['x', 'y'],sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
@@ -291,7 +291,7 @@
     "        bool3, y_std = stdev(Y, self.y_std, self.y_mean)\n",
     "        bool4 = torch.abs(cov - self.corr*x_std*y_std)<=0.01*cov\n",
     "        return (torch.logical_and(torch.logical_and(bool1, bool2),torch.logical_and(bool3, bool4)), self.corr )\n",
-    "    \n",
+    "\n",
     "prover_gen_settings(data_path,['x', 'y'], sel_data_path, prover_model,prover_model_path, [3], \"resources\", settings_path)"
    ]
   },
