--- a/examples/covariance/covariance.ipynb
+++ b/examples/covariance/covariance.ipynb
@@ -145,7 +145,7 @@
     "print(\"y mean: \", y_mean)\n",
     "\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())\n",
     "dummy_x_vals = dummy_data['x']\n",
     "dummy_y_vals = dummy_data['y']\n",
