--- a/examples/mean+median/mean+median.ipynb
+++ b/examples/mean+median/mean+median.ipynb
@@ -140,7 +140,7 @@
     "data2 = data['col_2']\n",
     "\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())\n",
     "dummy_data1 = dummy_data['col_1']\n",
     "dummy_data2 = dummy_data['col_2']\n",
