--- a/examples/median/median.ipynb
+++ b/examples/median/median.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "data = json.loads(open(data_path, \"r\").read())['col_name']\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())['col_name']\n",
     "\n",
     "dummy_theory_output = torch.tensor(np.median(dummy_data))\n",
