--- a/examples/regression/regression.ipynb
+++ b/examples/regression/regression.ipynb
@@ -133,7 +133,7 @@
     "x2_vals = data['x2']\n",
     "y_vals = data['y']\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())\n",
     "dummy_x1_vals = dummy_data['x1']\n",
     "dummy_x2_vals = dummy_data['x2']\n",
