--- a/examples/where+mean/where+mean.ipynb
+++ b/examples/where+mean/where+mean.ipynb
@@ -128,9 +128,9 @@
     "\n",
     "data = np.array(json.loads(open(data_path, \"r\").read())['col_name'])\n",
     "data_tensor = torch.reshape(torch.tensor(data),(1,-1, 1))\n",
-    "# remember that our createDummy creates random numbers in range 1 - 30, so need to make sure this example the filter doesnt \n",
+    "# remember that our create_dummy creates random numbers in range 1 - 30, so need to make sure this example the filter doesnt \n",
     "# get filter out all data\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = np.array(json.loads(open(dummy_data_path, \"r\").read())['col_name'])\n",
     "dummy_data_tensor = torch.reshape(torch.tensor(dummy_data), (1,-1,1))\n",
     "\n",
