--- a/examples/where+mode/where+mode.ipynb
+++ b/examples/where+mode/where+mode.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "data = np.array(json.loads(open(data_path, \"r\").read())['col_name'])\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = np.array(json.loads(open(dummy_data_path, \"r\").read())['col_name'])\n",
     "\n",
     "dummy_theory_output = torch.tensor(mode_within(dummy_data[dummy_data>20],1))\n",
