--- a/examples/where+stdev/where+stdev.ipynb
+++ b/examples/where+stdev/where+stdev.ipynb
@@ -136,7 +136,7 @@
     "# Note, here we make\n",
     "gt5_data_tensor = data_tensor[data_tensor > 5].reshape(1,-1,1)\n",
     "\n",
-    "createDummy(data_path, dummy_data_path) \n",
+    "create_dummy(data_path, dummy_data_path) \n",
     "dummy_data = np.array(json.loads(open(dummy_data_path, \"r\").read())['col_name'])\n",
     "\n",
     "dummy_data_tensor = torch.reshape(torch.tensor(dummy_data), (1,-1,1))\n",
