--- a/examples/pvariance/pvariance.ipynb
+++ b/examples/pvariance/pvariance.ipynb
@@ -123,7 +123,7 @@
     "data = json.loads(open(data_path, \"r\").read())['col_name']\n",
     "data_tensor = torch.reshape(torch.tensor(data),(1,-1, 1))\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())['col_name']\n",
     "dummy_data_tensor = torch.reshape(torch.tensor(dummy_data), (1,-1,1))\n",
     "\n",
