--- a/examples/where+median/where+median.ipynb
+++ b/examples/where+median/where+median.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "data = np.array(json.loads(open(data_path, \"r\").read())['col_name'])\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = np.array(json.loads(open(dummy_data_path, \"r\").read())['col_name'])\n",
     "\n",
     "dummy_theory_output = torch.tensor(np.median(dummy_data[dummy_data<50]))\n",
