--- a/examples/where+regression/where+regression.ipynb
+++ b/examples/where+regression/where+regression.ipynb
@@ -134,7 +134,7 @@
     "x2_vals = np.array(data['x2'])\n",
     "y_vals = np.array(data['y'])\n",
     "\n",
-    "createDummy(data_path, dummy_data_path)\n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = json.loads(open(dummy_data_path, \"r\").read())\n",
     "dummy_x1_vals = np.array(dummy_data['x1'])\n",
     "dummy_x2_vals = np.array(dummy_data['x2'])\n",
