--- a/examples/mean+median/mean+median.ipynb
+++ b/examples/mean+median/mean+median.ipynb
@@ -182,7 +182,7 @@
     "    count_equal = torch.sum((torch.abs(X-median)<=torch.abs(0.01*median)).double())\n",
     "    len = X.size()[1]\n",
     "    half_len = torch.floor(torch.div(len, 2))\n",
-    "        \n",
+    "\n",
     "    # not support modulo yet\n",
     "    less_cons = count_less<half_len+2*(len/2 - torch.floor(len/2))\n",
     "    more_cons = count_less+count_equal>half_len\n",
@@ -198,7 +198,7 @@
     "\n",
     "    median_in_cons = torch.logical_and(less_cons, more_cons)\n",
     "    median_out_cons = torch.logical_and(torch.logical_and(bound, bound_avg), torch.logical_and(torch.logical_and(lower_cons, upper_cons), torch.logical_and(lower_exist, upper_exist)))\n",
-    "        \n",
+    "\n",
     "    return(torch.where(count_equal==0, median_out_cons, median_in_cons), median)\n"
    ]
   },
@@ -210,6 +210,17 @@
    "source": [
     "def mean(X, mean):\n",
     "    return (torch.abs(torch.sum(X)-X.size()[1]*(mean))<=torch.abs(0.01*X.size()[1]*mean), mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scales = [1]\n",
+    "selected_columns = ['col_1', 'col_2']\n",
+    "commitment_maps = get_data_commitment_maps(data_path, scales)"
    ]
   },
   {
@@ -257,7 +268,7 @@
     "        bool3, output_mean = mean(torch.tensor([median1, median2]).reshape(1,-1,1), self.mean)\n",
     "        return (torch.logical_and(torch.logical_and(bool1, bool2),bool3), output_mean )\n",
     "\n",
-    "    \n",
+    "\n",
     "\n",
     "verifier_define_calculation(dummy_data_path, ['col_1', 'col_2'],sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
@@ -315,9 +326,9 @@
     "        bool3, output_mean = mean(torch.tensor([median1, median2]).reshape(1,-1,1), self.mean)\n",
     "        return (torch.logical_and(torch.logical_and(bool1, bool2),bool3), output_mean )\n",
     "\n",
-    " \n",
-    "      \n",
-    "prover_gen_settings(data_path,['col_1', 'col_2'], sel_data_path, prover_model,prover_model_path, 'default', \"resources\", settings_path)"
+    "\n",
+    "\n",
+    "prover_gen_settings(data_path,['col_1', 'col_2'], sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
   },
   {
@@ -381,7 +392,7 @@
     }
    ],
    "source": [
-    "# Here verifier & prover can concurrently call setup since all params are public to get pk. \n",
+    "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
     "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
@@ -410,7 +421,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   },
   {
@@ -437,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
