--- a/examples/median/median.ipynb
+++ b/examples/median/median.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "\n",
     " \n",
-    "prover_gen_settings(data_path,['col_name'], sel_data_path, prover_model,prover_model_path, 'default', \"resources\", settings_path)"
+    "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, 'default', \"resources\", settings_path)"
    ]
   },
   {
@@ -364,7 +364,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   },
   {
