--- a/examples/mode/mode.ipynb
+++ b/examples/mode/mode.ipynb
@@ -162,6 +162,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scales = [1]\n",
+    "selected_columns = ['col_name']\n",
+    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -195,7 +206,7 @@
     "        count_equal = torch.sum((torch.abs(X-self.w)<=torch.abs(0.01*self.w)).double())\n",
     "        result = torch.tensor([torch.sum((torch.abs(X-ele[0])<=torch.abs(0.01*ele[0])).double())<=count_equal for ele in X[0]])\n",
     "        return (torch.sum(result) == X.size()[1], self.w)\n",
-    "    \n",
+    "\n",
     "verifier_define_calculation(dummy_data_path, ['col_name'],sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
@@ -245,7 +256,7 @@
     "        result = torch.tensor([torch.sum((torch.abs(X-ele[0])<=torch.abs(0.01*ele[0])).double())<=count_equal for ele in X[0]])\n",
     "        return (torch.sum(result) == X.size()[1], self.w)\n",
     "\n",
-    "prover_gen_settings(data_path,['col_name'], sel_data_path, prover_model,prover_model_path, 'default', \"resources\", settings_path)"
+    "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
   },
   {
@@ -309,7 +320,7 @@
     }
    ],
    "source": [
-    "# Here verifier & prover can concurrently call setup since all params are public to get pk. \n",
+    "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
     "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
@@ -338,7 +349,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   },
   {
