--- a/examples/where+geomean/where+geomean.ipynb
+++ b/examples/where+geomean/where+geomean.ipynb
@@ -141,6 +141,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scales = [8]\n",
+    "selected_columns = ['col_name']\n",
+    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -167,8 +178,8 @@
     "        num_fil_X = torch.sum(filter.double())\n",
     "        fil_X = torch.where(filter, X, 1.0)\n",
     "        return (torch.abs((torch.log(self.w)*num_fil_X)-torch.sum(torch.log(fil_X)))<=num_fil_X*torch.log(torch.tensor(1.01)), self.w)\n",
-    "  \n",
-    "verifier_define_calculation(dummy_data_path, ['col_name'],sel_dummy_data_path,verifier_model, verifier_model_path)"
+    "\n",
+    "verifier_define_calculation(dummy_data_path, selected_columns, sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
   {
@@ -205,7 +216,7 @@
     "        super(prover_model, self).__init__()\n",
     "        # w represents mean in this case\n",
     "        self.w = nn.Parameter(data = theory_output, requires_grad = False)\n",
-    "        \n",
+    "\n",
     "    def forward(self,X):\n",
     "        # where part\n",
     "        filter = (X>20)\n",
@@ -214,8 +225,8 @@
     "        print('self w: ', self.w)\n",
     "        return (torch.abs((torch.log(self.w)*num_fil_X)-torch.sum(torch.log(fil_X)))<=num_fil_X*torch.log(torch.tensor(1.01)), self.w)\n",
     "\n",
-    "    \n",
-    "prover_gen_settings(data_path,['col_name'], sel_data_path, prover_model,prover_model_path, [8], \"resources\", settings_path)"
+    "\n",
+    "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
   },
   {
@@ -279,7 +290,7 @@
     }
    ],
    "source": [
-    "# Here verifier & prover can concurrently call setup since all params are public to get pk. \n",
+    "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
     "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
@@ -314,7 +325,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   },
   {
