--- a/examples/where+median/where+median.ipynb
+++ b/examples/where+median/where+median.ipynb
@@ -142,6 +142,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scales = [2]\n",
+    "selected_columns = ['col_name']\n",
+    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -173,7 +184,7 @@
     "        num_fil_X = X.size()[1]-num_lowest\n",
     "        min_X = torch.min(X)\n",
     "        fil_X = torch.where(filter, X, min_X-1)\n",
-    "        \n",
+    "\n",
     "        count_less = torch.sum((fil_X < 0.99*self.w).double()) - num_lowest\n",
     "        count_equal = torch.sum((torch.abs(fil_X-self.w)<=torch.abs(0.01*self.w)).double())\n",
     "        half_len = torch.floor(torch.div(num_fil_X, 2))\n",
@@ -193,11 +204,11 @@
     "\n",
     "        median_in_cons = torch.logical_and(less_cons, more_cons)\n",
     "        median_out_cons = torch.logical_and(torch.logical_and(bound, bound_avg), torch.logical_and(torch.logical_and(lower_cons, upper_cons), torch.logical_and(lower_exist, upper_exist)))\n",
-    "        \n",
+    "\n",
     "        return(torch.where(count_equal==0, median_out_cons, median_in_cons), self.w)\n",
     "\n",
     "\n",
-    "verifier_define_calculation(dummy_data_path, ['col_name'],sel_dummy_data_path,verifier_model, verifier_model_path)"
+    "verifier_define_calculation(dummy_data_path, selected_columns,sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
   {
@@ -234,7 +245,7 @@
     "        num_fil_X = X.size()[1]-num_lowest\n",
     "        min_X = torch.min(X)\n",
     "        fil_X = torch.where(filter, X, min_X-1)\n",
-    "        \n",
+    "\n",
     "        count_less = torch.sum((fil_X < 0.99*self.w).double()) - num_lowest\n",
     "        count_equal = torch.sum((torch.abs(fil_X-self.w)<=torch.abs(0.01*self.w)).double())\n",
     "        half_len = torch.floor(torch.div(num_fil_X, 2))\n",
@@ -258,7 +269,7 @@
     "        return(torch.where(count_equal==0, median_out_cons, median_in_cons), self.w)\n",
     "\n",
     "\n",
-    "prover_gen_settings(data_path,['col_name'], sel_data_path, prover_model,prover_model_path, [2], \"resources\", settings_path)"
+    "prover_gen_settings(data_path,selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
   },
   {
@@ -322,7 +333,7 @@
     }
    ],
    "source": [
-    "# Here verifier & prover can concurrently call setup since all params are public to get pk. \n",
+    "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
     "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
@@ -351,7 +362,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   },
   {
