--- a/examples/where+stdev/where+stdev.ipynb
+++ b/examples/where+stdev/where+stdev.ipynb
@@ -136,7 +136,7 @@
     "# Note, here we make\n",
     "gt5_data_tensor = data_tensor[data_tensor > 5].reshape(1,-1,1)\n",
     "\n",
-    "create_dummy(data_path, dummy_data_path) \n",
+    "create_dummy(data_path, dummy_data_path)\n",
     "dummy_data = np.array(json.loads(open(dummy_data_path, \"r\").read())['col_name'])\n",
     "\n",
     "dummy_data_tensor = torch.reshape(torch.tensor(dummy_data), (1,-1,1))\n",
@@ -150,6 +150,17 @@
     "data_mean = torch.mean(gt5_data_tensor)\n",
     "print(theory_output)\n",
     "print(data_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scales = [2]\n",
+    "selected_columns = ['col_name']\n",
+    "commitment_maps = get_data_commitment_maps(data_path, scales)"
    ]
   },
   {
@@ -186,8 +197,8 @@
     "        fil_std_X = torch.where(filter, X, self.data_mean)\n",
     "        print(\"bool: \",torch.logical_and(torch.abs(torch.sum((fil_std_X-self.data_mean)*(fil_std_X-self.data_mean))-self.w*self.w*(num_fil_X-1))<=torch.abs(0.02*self.w*self.w*(num_fil_X-1)),x_mean_cons) )\n",
     "        return (torch.logical_and(torch.abs(torch.sum((fil_std_X-self.data_mean)*(fil_std_X-self.data_mean))-self.w*self.w*(num_fil_X-1))<=torch.abs(0.02*self.w*self.w*(num_fil_X-1)),x_mean_cons),self.w)\n",
-    "    \n",
-    "verifier_define_calculation(dummy_data_path, ['col_name'],sel_dummy_data_path,verifier_model, verifier_model_path)"
+    "\n",
+    "verifier_define_calculation(dummy_data_path, selected_columns,sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
   {
@@ -216,7 +227,7 @@
     "        # w represents mean in this case\n",
     "        self.w = nn.Parameter(data = theory_output, requires_grad = False)\n",
     "        self.data_mean = nn.Parameter(data = data_mean, requires_grad = False)\n",
-    "        \n",
+    "\n",
     "    def forward(self,X):\n",
     "        filter = (X>5)\n",
     "        num_fil_X = torch.sum(filter.double())\n",
@@ -227,7 +238,7 @@
     "        return (torch.logical_and(torch.abs(torch.sum((fil_std_X-self.data_mean)*(fil_std_X-self.data_mean))-self.w*self.w*(num_fil_X-1))<=torch.abs(0.02*self.w*self.w*(num_fil_X-1)),x_mean_cons),self.w)\n",
     "\n",
     "\n",
-    "prover_gen_settings(data_path,['col_name'], sel_data_path, prover_model,prover_model_path, [2], \"resources\", settings_path)"
+    "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
   },
   {
@@ -291,7 +302,7 @@
     }
    ],
    "source": [
-    "# Here verifier & prover can concurrently call setup since all params are public to get pk. \n",
+    "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
     "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
@@ -320,7 +331,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   },
   {
