--- a/examples/mean/mean.ipynb
+++ b/examples/mean/mean.ipynb
@@ -151,6 +151,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scales = [5]\n",
+    "selected_columns = ['col_name']\n",
+    "commitment_maps = get_data_commitment_maps(data_path, scales)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -205,8 +216,8 @@
     "\n",
     "    def forward(self,X):\n",
     "        return (torch.abs(torch.sum(X)-X.size()[1]*(self.w))<=torch.abs(0.01*X.size()[1]*self.w), self.w)\n",
-    "        \n",
-    "prover_gen_settings(data_path,['col_name'], sel_data_path, prover_model,prover_model_path, [5], \"resources\", settings_path)"
+    "\n",
+    "prover_gen_settings(data_path, selected_columns, sel_data_path, prover_model,prover_model_path, scales, \"resources\", settings_path)"
    ]
   },
   {
@@ -301,7 +312,7 @@
    ],
    "source": [
     "# Verifier verifies\n",
-    "verifier_verify(proof_path, settings_path, vk_path)"
+    "verifier_verify(proof_path, settings_path, vk_path, selected_columns, commitment_maps)"
    ]
   }
  ],
@@ -321,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
