--- a/examples/mean/mean_OG.ipynb
+++ b/examples/mean/mean_OG.ipynb
@@ -173,7 +173,7 @@
     "        return (torch.tensor(1), torch.mean(X))\n",
     "        # return (torch.abs(torch.sum(X)-X.size()[1]*(self.w))<=torch.abs(0.01*X.size()[1]*self.w), self.w)\n",
     "\n",
-    "verifier_define_calculation(dummy_data_path, ['col_name'],sel_dummy_data_path,verifier_model, verifier_model_path)"
+    "verifier_define_calculation(dummy_data_path, selected_columns,sel_dummy_data_path,verifier_model, verifier_model_path)"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
