--- a/examples/stdev/stdev.ipynb
+++ b/examples/stdev/stdev.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
-    "verifier_setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
+    "setup(verifier_model_path, verifier_compiled_model_path, settings_path,vk_path, pk_path )\n",
     "\n",
     "print(\"=======================================\")\n",
     "# Prover generates proof\n",
