--- a/examples/computation/computation.ipynb
+++ b/examples/computation/computation.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zkstats.core import prover_gen_settings, verifier_setup, prover_gen_proof, verifier_verify, get_data_commitment_maps"
+    "from zkstats.core import prover_gen_settings, setup, prover_gen_proof, verifier_verify, get_data_commitment_maps"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "source": [
     "# Here verifier & prover can concurrently call setup since all params are public to get pk.\n",
     "# Here write as verifier function to emphasize that verifier must calculate its own vk to be sure\n",
-    "verifier_setup(prover_model_path, prover_compiled_model_path, settings_path, vk_path, pk_path )\n",
+    "setup(prover_model_path, prover_compiled_model_path, settings_path, vk_path, pk_path )\n",
     "\n",
     "print(\"=======================================\")\n",
     "# Prover generates proof\n",
