--- a/examples/geomean/geomean.ipynb
+++ b/examples/geomean/geomean.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i ../../zkstats/core.py"
+    "from zkstats.core import create_dummy, verifier_define_calculation, prover_gen_settings, setup, prover_gen_proof, verifier_verify, get_data_commitment_maps"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
